# unum-workspace

./: .gitignore  ACADEMIC_WORKFLOWS.md  FAN_IN_FIX_SUMMARY.md  FUTURES_EXECUTION_EXPLAINED.md  FUTURES_QUICK_REFERENCE.md  FUTURE_BASED_IMPLEMENTATION.md  PARTIAL_PARAMETER_STREAMING.md  SERVERLESS_REALITY_CHECK.md  SERVERLESS_SLEEP_TRUTH.md  SETUP_GUIDE.md  UNUM_ARCHITECTURE_AND_FUTURES.md  bibliography.bib  check_data.py  dagl.bat  dump.rdb  extract_pdf.py  extract_pdf2.py  fusion-no_fusion-comparison.md  out.json  samplepaper.tex  samplepaper_reviewd.tex  test_fn.js  unum-cli.bat  unum-cli.ps1
gcp-analyze-fn/: main.py
unum/: pyproject.toml  setup.cfg
unum/dagl-cli/: dagl.py
unum/dagl_cli/: __init__.py  dagl.py  registry.py  schema_inference.py
unum/dagl_cli/compiler/: __init__.py  dagl_compiler.py  dagl_to_unum_ir.py
unum/docs/: EARLY_INVOKE_OPTIMIZATION.md  data-store.md  execution-guarantee.md  runtime.md  tricky-cases.md  type-checking.md
unum/experiments/catch/step-functions/: template.yaml
unum/experiments/map/unum/: unum-template.yaml
unum/experiments/parallel-pipeline/unum/: unum-template.yaml
unum/experiments/pass/unum/: unum-template.yaml
unum/layer/: build_layer.py  build_layer_nodejs.py  layer-arn.txt
unum/layer/python/: publish_layer.py
unum/runtime/: ds.py  main.py  unum_streaming.py
unum/unum-cli/: DAGL_U_ARCHITECTURE.md  dagl_to_unum_ir.py  fusion_system_prompt.txt  requirements.txt  streaming_transformer.py  test_dagl_compiler.py  test_dagl_to_unum_ir.py  test_type_checker.py  type_checker.py  type_registry.py  unum-cli.py
(+775 files in other folders)
